<resources>
    <string name="APRIL">APRIL</string>
    <string name="AUGUST">AUGUST</string>
    <string name="Add_to_cart">Add to cart</string>
    <string name="Available_Days">Available Days</string>
    <string name="Available_tickets">Available tickets</string>
    <string name="Backup_Settings">Backup Settings</string>
    <string name="Billing_Addresses">Billing Addresses</string>
    <string name="Buy_on_x">Buy on %1$s</string>
    <string name="Cancelled">Cancelled</string>
    <string name="Cash">Cash</string>
    <string name="Check_In">Check In</string>
    <string name="Check_Out">Check Out</string>
    <string name="Choose_map">Choose map:</string>
    <string name="Collection">Collection</string>
    <string name="Color_mode">Color Mode</string>
    <string name="Continue_on_x">Continue on %1$s</string>
    <string name="Create_New">Create a New</string>
    <string name="Create_Product">Create product</string>
    <string name="Creating_product_message">Creating product...</string>
    <string name="DECEMBER">DECEMBER</string>
    <string name="Date">Date</string>
    <string name="Date_from">Date from</string>
    <string name="Description">Description</string>
    <string name="Donation_amount">Donation amount</string>
    <string name="Dropoff">Dropoff</string>
    <string name="Empty">Empty!</string>
    <string name="End_time">End time</string>
    <string name="Event_info">Event info</string>
    <string name="FEBRUARY">FEBRUARY</string>
    <string name="Failed_Delivery">Failed Delivery</string>
    <string name="Free">Free</string>
    <string name="Fri">Fri</string>
    <string name="Gap_Between_Time_Slots">Gap between time slots</string>
    <string name="Headset">Headset</string>
    <string name="Hybrid">Hybrid</string>
    <string name="JANUARY">JANUARY</string>
    <string name="JULY">JULY</string>
    <string name="JUNE">JUNE</string>
    <string name="Light">Light</string>
    <string name="Location_colon">Location:</string>
    <string name="MARCH">MARCH</string>
    <string name="MAY">MAY</string>
    <string name="Main_information">Main information</string>
    <string name="Max_images_message_per_product">The maximum number of images is %1$d</string>
    <string name="Mins">Mins</string>
    <string name="Mon">Mon</string>
    <string name="MyTrips">My Trips</string>
    <string name="My_Orders">My Orders</string>
    <string name="My_Profile">My Profile</string>
    <string name="NOVEMBER">NOVEMBER</string>
    <string name="No_Available_Trips">No Available Trips</string>
    <string name="No_Orders">No Orders</string>
    <string name="No_Record_Found">No Record Found</string>
    <string name="OCTOBER">OCTOBER</string>
    <string name="Order_placed">Order placed:</string>
    <string name="Pay_now">Pay now</string>
    <string name="Personal">Personal</string>
    <string name="Please_enter_bookings_per_timeslot">Please enter a valid number for bookings per time slot</string>
    <string name="Product_name">Product name</string>
    <string name="Quantity_colon">Quantity:</string>
    <string name="Required">Required</string>
    <string name="Restore">Restore</string>
    <string name="SEPTEMBER">SEPTEMBER</string>
    <string name="SIZE">SIZE</string>
    <string name="SMS">SMS</string>
    <string name="Sat">Sat</string>
    <string name="Send_this_location">Send this location</string>
    <string name="Send_your_current_location">Send your current location</string>
    <string name="Set_Time_Slot">Set Time Slot</string>
    <string name="Set_your_rate">Please set your rating</string>
    <string name="Shipping_Addresses">Shipping Addresses</string>
    <string name="Skip">Skip</string>
    <string name="Skip_restore">Skip Restore</string>
    <string name="Sold_out">Sold Out</string>
    <string name="Start_time">Start time</string>
    <string name="Sun">Sun</string>
    <string name="TO">TO</string>
    <string name="Theme_mode">Theme mode</string>
    <string name="Thu">Thu</string>
    <string name="Tickets_details">Tickets Details</string>
    <string name="Time_Slot_Duration">Time Slot Duration</string>
    <string name="Time_from">Time from</string>
    <string name="Time_slot">Time slot</string>
    <string name="Time_to">Time to</string>
    <string name="To">To</string>
    <string name="Today_x">Today %1$s</string>
    <string name="Trip_status_not_Started">The trip has not started yet</string>
    <string name="Trips">Trips</string>
    <string name="Tue">Tue</string>
    <string name="Unavailable">Unavailable!</string>
    <string name="UpcomingTrips">Upcoming Trips</string>
    <string name="Update_Booking">Update Booking</string>
    <string name="Update_Event">Update Event</string>
    <string name="Update_Product">Update product</string>
    <string name="Updating_order_message">Updating product...</string>
    <string name="Updating_product_message">Updating product...</string>
    <string name="Used">Used</string>
    <string name="Wed">Wed</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="accept_admin">Accept to be admin</string>
    <string name="accept_invitation">Accept invitation?</string>
    <string name="accept_text">Accept</string>
    <string name="accept_title">Accept</string>
    <string name="accept_x_role">Accept %1$s role?</string>
    <string name="accepted">Accepted</string>
    <string name="access_calendar_permission_message">Please allow %s to access your calendar so we can synchronize your events.</string>
    <string name="access_prohibited_desc">Only admins are authorized to access this section.</string>
    <string name="access_prohibited_title">Access Prohibited</string>
    <string name="accurate_to_x_meters">accurate to %1$d meters</string>
    <string name="achieved_your_goal">Achieved your goal</string>
    <string name="action_block">Block Contact</string>
    <string name="action_call">Call</string>
    <string name="action_change_relationship">Change relationship</string>
    <string name="action_chat">Chat</string>
    <string name="action_mark_favorite">Mark as favorite</string>
    <string name="action_search">Search</string>
    <string name="action_send_email">Send email to contact</string>
    <string name="action_settings">Settings</string>
    <string name="action_video_call">Video call</string>
    <string name="activate_bots">Verify Bots</string>
    <string name="activate_your_email">Verify your email</string>
    <string name="active">Active</string>
    <string name="ad_banner_key">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_google_key">ca-app-pub-2933850672272299~1986063925</string>
    <string name="ad_native_key">ca-app-pub-3940256099942544/2247696110</string>
    <string name="add">Add</string>
    <string name="add_address">Add address</string>
    <string name="add_admin">Add admin</string>
    <string name="add_admin_bot_message">Note: Bots are granted automatic admin access.</string>
    <string name="add_at_least_one_image">Add at least one image</string>
    <string name="add_by_email">Add your friend who registered for %1$s by email address</string>
    <string name="add_by_phone">Add your friend who registered for %1$s by phone number</string>
    <string name="add_caption">Add a caption…</string>
    <string name="add_contact">Add contact</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_all_tickets">Cancel all bookings</string>
    <string name="cancel_current_booking">Cancel Current Booking</string>
    <string name="cancel_current_booking_message">Are you sure you want to cancel your Current booking?</string>
    <string name="channel_messaging">Channel Messaging</string>
    <string name="confirm">Confirm</string>
    <string name="contact_messaging">Personal Messaging</string>
    <string name="create">Create</string>
    <string name="create_channel">Create Channel</string>
    <string name="create_new_group">Create new group</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_call_log">Delete call log</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="delete_event">Delete Event</string>
    <string name="edit">Edit</string>
    <string name="filter">Filter</string>
    <string name="flush_all">Flush All</string>
    <string name="flush_db">Flush DB</string>
    <string name="font_roboto">sans-serif</string>
    <string name="font_roboto_light">sans-serif-light</string>
    <string name="font_roboto_medium">sans-serif-medium</string>
    <string name="get_token">Get token</string>
    <string name="group_messaging">Group Messaging</string>
    <string name="map_messaging">Map Messaging</string>
    <string name="mute">Mute</string>
    <string name="notifications">Notifications</string>
    <string name="ok">OK</string>
    <string name="open_cart">Open cart</string>
    <string name="posts_feeds">Posts/Feeds</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_contacts">Refresh</string>
    <string name="reject_title">Reject</string>
    <string name="report_abuse">Report abuse</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="search">Search</string>
    <string name="self_sms_desc">You must send the SMS verification message from your phone to validate your mobile number.</string>
    <string name="self_sms_desc1">• Please select your SMS application then click \"Send\"</string>
    <string name="self_sms_desc2">• Local SMS charges may be applied.</string>
    <string name="self_sms_title">Verify Your Phone Number</string>
    <string name="send_by_mail">Send by mail</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="stop_bot">Stop bot</string>
    <string name="title_my_stickers">My stickers</string>
    <string name="upgrade_to_business">Upgrade to business</string>
    <string name="video">Video</string>
    <string name="x_tickets">%1$d Tickets</string>
</resources>