<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_baseline_phone_colortoolbarprimarytext_24dp" android:id="@id/action_call" android:visible="false" android:orderInCategory="1" android:title="@string/call" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_baseline_videocam_colortoolbarprimarytext_24dp" android:id="@id/action_video_call" android:visible="false" android:orderInCategory="2" android:title="@string/action_video_call" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_search_colortoolbarprimarytext_24dp" android:id="@id/action_search" android:orderInCategory="4" android:title="@string/action_search" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_dashboard_colortoolbarprimarytext_24_dp" android:id="@id/action_navigation_menu" android:orderInCategory="5" android:title="Navigation menu" app:showAsAction="always" />
    <item android:icon="@drawable/ic_notifications_colortoolbarprimarytext_24_dp" android:id="@id/msg_board_notification" android:orderInCategory="6" android:title="@string/notifications" app:showAsAction="always" />
    <item android:icon="@drawable/ic_filter_colortoolbarprimarytext_28dp" android:id="@id/action_filter" android:visible="false" android:orderInCategory="7" android:title="@string/filter" app:showAsAction="never" />
    <item android:id="@id/msg_board_mute_chat" android:orderInCategory="8" android:title="@string/mute" app:showAsAction="never" />
    <item android:id="@id/msg_board_delete_chat" android:orderInCategory="9" android:title="@string/delete_chat" app:showAsAction="never" />
    <item android:icon="@drawable/ic_baseline_share_colortoolbarprimarytext_24dp" android:id="@id/action_share" android:visible="false" android:orderInCategory="10" android:title="@string/share" app:showAsAction="never" />
    <item android:id="@id/upgrade_to_business" android:visible="false" android:orderInCategory="11" android:title="@string/upgrade_to_business" app:showAsAction="never" />
    <item android:id="@id/get_token" android:visible="false" android:orderInCategory="12" android:title="@string/get_token" app:showAsAction="never" />
    <item android:id="@id/start_bot" android:visible="false" android:orderInCategory="13" android:title="Start bot" app:showAsAction="never" />
    <item android:id="@id/stop_bot" android:visible="false" android:orderInCategory="14" android:title="@string/stop_bot" app:showAsAction="never" />
    <item android:id="@id/action_settings" android:visible="false" android:orderInCategory="15" android:title="@string/settings" app:showAsAction="never" />
    <item android:id="@id/action_report_abuse" android:visible="false" android:orderInCategory="16" android:title="@string/report_abuse" app:showAsAction="never" />
    <item android:icon="@drawable/ic_outline_add_colortoolbarprimarytext_24dp" android:id="@id/create_new_group" android:visible="false" android:orderInCategory="17" android:title="@string/create_new_group" app:showAsAction="never" />
    <item android:icon="@drawable/ic_outline_add_colortoolbarprimarytext_24dp" android:id="@id/add_contact" android:visible="false" android:orderInCategory="18" android:title="@string/add_contact" app:showAsAction="never" />
</menu>
