<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/action_delete" android:orderInCategory="5" android:title="@string/delete_event" app:showAsAction="never" />
    <item android:icon="@drawable/ic_baseline_share_colortoolbarprimarytext_24dp" android:id="@id/action_share" android:visible="false" android:orderInCategory="4" android:title="@string/share" app:showAsAction="never" />
    <item android:id="@id/action_report_abuse" android:visible="false" android:orderInCategory="3" android:title="@string/report_abuse" app:showAsAction="never" />
    <item android:id="@id/action_accept" android:orderInCategory="1" android:title="@string/accept_title" app:showAsAction="never" />
    <item android:id="@id/action_reject" android:orderInCategory="2" android:title="@string/reject_title" app:showAsAction="never" />
</menu>
