<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_search_colortoolbarprimarytext_24dp" android:id="@id/action_search" android:orderInCategory="1" android:title="@string/action_search" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_mysticker_white_24dp" android:id="@id/action_settings" android:orderInCategory="100" android:title="@string/title_my_stickers" app:showAsAction="ifRoom" />
    <item android:id="@id/action_flush_db" android:visible="false" android:orderInCategory="100" android:title="@string/flush_db" app:showAsAction="never" />
    <item android:id="@id/action_flush_all" android:visible="false" android:orderInCategory="100" android:title="@string/flush_all" app:showAsAction="never" />
</menu>
