<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="pref_screen_notifications_settings"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen android:title="@string/posts_feeds" android:key="pref_posts_and_feeds_notifications_settings" android:fragment="com.nandbox.view.settings.fragments.SettingsNotificationsPostsAndFeedsFragment" app:iconSpaceReserved="false" />
    <PreferenceScreen android:title="@string/contact_messaging" android:key="pref_contact_notifications_settings" android:fragment="com.nandbox.view.settings.fragments.SettingsNotificationsContactChatFragment" app:iconSpaceReserved="false" />
    <PreferenceScreen android:title="@string/group_messaging" android:key="pref_group_notifications_settings" android:fragment="com.nandbox.view.settings.fragments.SettingsNotificationsGroupChatFragment" app:iconSpaceReserved="false" />
    <PreferenceScreen android:title="@string/channel_messaging" android:key="pref_channel_notifications_settings" android:fragment="com.nandbox.view.settings.fragments.SettingsNotificationsChannelChatFragment" app:iconSpaceReserved="false" />
    <PreferenceScreen android:title="@string/map_messaging" android:key="pref_map_notifications_settings" android:fragment="com.nandbox.view.settings.fragments.SettingsNotificationsMapFragment" app:iconSpaceReserved="false" />
</PreferenceScreen>
