<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/rounded_gray_stroke" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="?colorOnSurface" android:layout_gravity="center_horizontal" android:id="@id/txt_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dp" android:text="@string/cancel_current_booking" android:fontFamily="@string/font_roboto_medium" android:layout_marginStart="4.0dp" android:layout_marginEnd="4.0dp" />
    <TextView android:textSize="14.0sp" android:textColor="?colorOnSurfaceVariant" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:layout_marginBottom="14.0dp" android:text="@string/cancel_current_booking_message" android:fontFamily="@string/font_roboto_light" android:textAlignment="center" android:layout_marginStart="12.0dp" android:layout_marginEnd="12.0dp" />
    <com.google.android.material.divider.MaterialDivider android:layout_width="match_parent" android:layout_height="wrap_content" />
    <FrameLayout android:id="@id/fl_current_container" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="?colorPrimary" android:layout_gravity="center_horizontal" android:id="@id/txt_current" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:layout_marginBottom="16.0dp" android:text="@string/confirm" android:fontFamily="@string/font_roboto" />
    </FrameLayout>
    <com.google.android.material.divider.MaterialDivider android:layout_width="match_parent" android:layout_height="wrap_content" />
    <FrameLayout android:id="@id/fl_cancel_all_container" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:layout_marginBottom="16.0dp">
            <TextView android:textSize="16.0sp" android:textColor="?colorPrimary" android:id="@id/txt_all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel_all_tickets" android:fontFamily="@string/font_roboto" />
            <TextView android:textSize="16.0sp" android:textColor="?colorError" android:id="@id/txt_x_tickets" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x_tickets" android:fontFamily="@string/font_roboto" android:layout_marginStart="4.0dp" />
        </LinearLayout>
    </FrameLayout>
    <com.google.android.material.divider.MaterialDivider android:layout_width="match_parent" android:layout_height="wrap_content" />
    <FrameLayout android:id="@id/fl_cancel_container" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="?colorOnSurfaceVariant" android:layout_gravity="center_horizontal" android:id="@id/txt_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:layout_marginBottom="16.0dp" android:text="@string/cancel" android:fontFamily="@string/font_roboto_medium" />
    </FrameLayout>
</LinearLayout>
