<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="16.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="20.0sp" android:textColor="?colorOnSurface" android:gravity="center" android:id="@id/title_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="22.0dp" android:text="@string/self_sms_title" android:fontFamily="@string/font_roboto_medium" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="16.0sp" android:textColor="?colorOnSurfaceVariant" android:gravity="start" android:id="@id/self_sms_desc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:text="@string/self_sms_desc" android:fontFamily="@string/font_roboto" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title_text" />
    <TextView android:textSize="16.0sp" android:textColor="?colorOnSurfaceVariant" android:gravity="start" android:id="@id/self_sms_desc1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:text="@string/self_sms_desc1" android:fontFamily="@string/font_roboto" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/self_sms_desc" />
    <TextView android:textSize="16.0sp" android:textColor="?colorOnSurfaceVariant" android:gravity="start" android:id="@id/self_sms_desc2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dp" android:text="@string/self_sms_desc2" android:fontFamily="@string/font_roboto" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/self_sms_desc1" />
    <Button android:id="@id/ok_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:text="@string/ok" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/self_sms_desc2" style="@style/Widget.Material3.Button.TextButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
