<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="pref_screen_media_auto_download"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen android:title="@string/posts_feeds" android:key="pref_screen_posts_and_feeds_media_auto_download" android:fragment="com.nandbox.view.settings.fragments.SettingsMediaAutoDownloadPostsAndFeedsFragment" app:iconSpaceReserved="false" />
    <PreferenceScreen android:title="@string/contact_messaging" android:key="pref_screen_contact_media_auto_download" android:fragment="com.nandbox.view.settings.fragments.SettingsMediaAutoDownloadContactChatFragment" app:iconSpaceReserved="false" />
    <PreferenceScreen android:title="@string/group_messaging" android:key="pref_screen_group_media_auto_download" android:fragment="com.nandbox.view.settings.fragments.SettingsMediaAutoDownloadGroupChatFragment" app:iconSpaceReserved="false" />
    <PreferenceScreen android:title="@string/channel_messaging" android:key="pref_screen_channel_media_auto_download" android:fragment="com.nandbox.view.settings.fragments.SettingsMediaAutoDownloadChannelChatFragment" app:iconSpaceReserved="false" />
</PreferenceScreen>
